syntax = "proto3";
option go_package = "transport.com/homeSyncGrpc";

import "google/protobuf/timestamp.proto";
package homeSync;
message BasicSensorData{
  google.protobuf.Timestamp time  = 1;
  float value                     = 2;
}
message Boundary{
  float value1                     = 1;
  float value2                     = 2;
  float value3                     = 3;
  float value4                     = 4;
}

message SensorData {
  enum Type {
    TEMPERATURE = 0;
    HUMIDITY    = 1;
    CO2         = 2;
    DEVICE      = 3;
  }
  string id   = 1;
  string name = 2;
  Type type   = 3;
  Boundary boundary = 4;
  BasicSensorData   basicData = 5;
}

message GroupData{
  string id                       = 1;
  repeated SensorData sensorsData = 2;
}

message SensorsRequest {
  string token = 1;
}

message SensorsResponseSuccess {
  google.protobuf.Timestamp time  = 1;
  repeated GroupData groupsData   = 2;
}

message SensorsResponse {
  oneof response{
    Error error                     = 1;
    SensorsResponseSuccess success  = 2;
  }
}



message HistorySensorDataRequest {
  string token      = 1;
  string blockId    = 2;
  string sensorId   = 3;
}

message HistorySensorsDataResponseSuccess {
  string id                           = 1;
  repeated BasicSensorData sensorData = 2;
}

message HistorySensorsDataResponse {
  oneof response{
    Error error                               = 1;
    HistorySensorsDataResponseSuccess success = 2;
  }
}


message SetSensorData {
  string token      = 1;
  string blockId    = 2;
  string sensorId   = 3;
  string name       = 4;
}

message SetBoundaryRequest {
  string token      = 1;
  string blockId    = 2;
  string sensorId   = 3;
  Boundary boundary = 4;
}

message Error {
  enum ErrorCode {
    OK = 0;
    ERROR = 1;
    UNKNOWN_REQUEST = 2;
    UNKNOWN_ID = 3;
    UNKNOWN_TOKEN = 4;
  }
  ErrorCode code = 1;
}