syntax = "proto3";
option go_package = "transport.com/homeSyncGrpc";

import "home_sync_message.proto";
package homeSync;
service HomeSyncGrpcService {
  rpc GetSensors(SensorsRequest) returns (SensorsResponse);
  rpc GetHistorySensorData(HistorySensorDataRequest) returns (HistorySensorsDataResponse);
  rpc SetName(SetSensorData) returns (Error);
  rpc SetBoundary(SetBoundaryRequest) returns (Error);
}